@@ -12,6 +12,7 @@ Version 1.7.6+svn:
      displaying descriptions
    * Various code cleanups
    * Fixed a lot of issues found by cppcheck.
+   * Fixed "Revert all changes" feature in the map editor (bug #14266)
 
 Version 1.7.6:
  * AI:
